<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="id.gravicodev.cashgo.Activity.ScanResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/scanresult_toolbar_scanresult"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/scan_result"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <TextView
                android:id="@+id/scanresult_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_name_result"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:id="@+id/scanresult_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_price_result"
                android:textColor="@android:color/tertiary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/activity_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/scan_size_result"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/secondary_text_light" />

            <Spinner
                android:id="@+id/scanresult_spinner_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/activity_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/scan_amount_result"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/secondary_text_light" />

            <EditText
                android:id="@+id/scanresult_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scan_hint_amount"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceSmall" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/scanresult_picture"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/promo_name"
                android:scaleType="centerCrop"
                android:src="?attr/selectableItemBackgroundBorderless" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/scanresult_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/activity_padding"
            android:text="@string/scan_another_result"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/scanresult_button_addcart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/scan_addcart_result"
        android:textColor="@android:color/white" />

</android.support.design.widget.CoordinatorLayout>
