<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/activity_padding">

                <TextView
                    android:id="@+id/profile_name_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/name_account"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/secondary_text_light" />

                <TextView
                    android:id="@+id/profile_email_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/profile_name_account"
                    android:layout_marginTop="8dp"
                    android:text="@string/email_account"
                    android:textColor="@android:color/tertiary_text_light" />

                <TextView
                    android:id="@+id/profile_phone_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/profile_email_account"
                    android:text="@string/phone_account"
                    android:textColor="@android:color/tertiary_text_light" />

                <TextView
                    android:id="@+id/profile_edit_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/edit_account"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

            </RelativeLayout>

            <TextView
                android:id="@+id/profile_transaction_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/activity_padding"
                android:text="@string/transaction_account"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/secondary_text_light" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBackground" />

            <TextView
                android:id="@+id/profile_history_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/activity_padding"
                android:text="@string/history_account"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:id="@+id/profile_service_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:drawablePadding="@dimen/activity_padding"
                android:drawableStart="@drawable/ic_info"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/activity_padding"
                android:text="@string/service_account"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/secondary_text_light" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="end"
                android:background="@color/colorBackground" />

            <TextView
                android:id="@+id/profile_privacy_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clickable="true"
                android:drawablePadding="@dimen/activity_padding"
                android:drawableStart="@drawable/ic_document"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/activity_padding"
                android:text="@string/privacy_police_account"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/secondary_text_light" />

            <Button
                android:id="@+id/profile_signout_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/signout_account"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>