<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="id.gravicodev.cashgo.Activity.SignupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/signup_toolbar_signup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/signup"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_name_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@android:color/white">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/signup_name_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_padding"
                android:drawableStart="@drawable/ic_account"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/activity_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:backgroundTint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@android:color/white">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/signup_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_padding"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/activity_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:backgroundTint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_phone_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@android:color/white">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/signup_phone_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_padding"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/activity_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:backgroundTint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@android:color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/signup_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_padding"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/activity_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:backgroundTint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signup_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
